# omni

./: Cargo.toml  README.md  fzf-content.sh  omni.tmux  pane-capture.sh  window-picker.sh
src/: env.rs  main.rs  tmux.rs
