[package]
name = "omni"
version = "0.1.0"
edition = "2021"
description = "fzf-backed tmux pane/window navigation and scrollback capture"

[[bin]]
name = "omni"
path = "src/main.rs"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
regex = "1"

[profile.release]
opt-level = 2
strip = true
